Fix Guava Immutable{Set|List|Map} (#586)
* issue-489: fix ImmutableList.of(1, 2).stream()
issue-520: fix isParentTypeDownCast throws IndexOutOfBoundsException

* Apply formatter to clear out automated suggestions

* Drop IntelliJ annotation

* Minimize diff due to line wrap

* Replace mutable field with identity check

* Format the tests while we're at it

* Add missing newline between tests

* Drop `.contextSensitive` by updating name.type too

* Standardize variable use around JavaTemplate

* Use withers on J.ParameterizedType in createNewTypeExpression

* Drop nonNull as method invocation; only used as method reference

---------

Co-authored-by: Tim te Beek <tim@moderne.io>