@@ -39,7 +39,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
           java(
             """
               import com.google.common.collect.ImmutableList;
-
+              
               class Test {
                   ImmutableList<String> getList() {
                       return ImmutableList.of();
@@ -58,10 +58,10 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
           java(
             """
               import com.google.common.collect.ImmutableList;
-
+              
               class Test {
                   ImmutableList<String> m;
-
+              
                   {
                       this.m = ImmutableList.of();
                   }
@@ -78,10 +78,10 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
           java(
             """
               import com.google.common.collect.ImmutableList;
-
+              
               class Test {
                   ImmutableList<String> m;
-
+              
                   void init() {
                       m = ImmutableList.of();
                   }
@@ -98,7 +98,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
           java(
             """
               import com.google.common.collect.ImmutableList;
-
+              
               public class A {
                   ImmutableList<String> immutableList;
                   public A(ImmutableList<String> immutableList) {
@@ -111,7 +111,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
           java(
             """
               import com.google.common.collect.ImmutableList;
-
+              
               class Test {
                   A a = new A(ImmutableList.of());
               }
@@ -129,7 +129,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
                 //language=java
                 """
                   import com.google.common.collect.ImmutableList;
-
+                  
                   public class A {
                       ImmutableList<String> immutableList;
                       public void method(ImmutableList<String> immutableList) {
@@ -143,7 +143,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
           java(
             """
               import com.google.common.collect.ImmutableList;
-
+              
               class Test {
                   void method() {
                       A a = new A();
@@ -164,14 +164,14 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
               """
                 import java.util.List;
                 import com.google.common.collect.ImmutableList;
-
+                
                 class Test {
                     List<String> m = ImmutableList.of("A", "B", "C", "D");
                 }
                 """,
               """
                 import java.util.List;
-
+                
                 class Test {
                     List<String> m = List.of("A", "B", "C", "D");
                 }
@@ -191,7 +191,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
               """
                 import java.util.List;
                 import com.google.common.collect.ImmutableList;
-
+                
                 class Test {
                     List<String> m;
                     {
@@ -201,7 +201,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
                 """,
               """
                 import java.util.List;
-
+                
                 class Test {
                     List<String> m;
                     {
@@ -224,14 +224,14 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
               """
                 import java.util.List;
                 import com.google.common.collect.ImmutableList;
-
+                
                 class Test {
                     List<String> m = ImmutableList.of();
                 }
                 """,
               """
                 import java.util.List;
-
+                
                 class Test {
                     List<String> m = List.of();
                 }
@@ -251,7 +251,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
               """
                 import java.util.List;
                 import com.google.common.collect.ImmutableList;
-
+                
                 class Test {
                     List<String> list() {
                         return ImmutableList.of();
@@ -260,7 +260,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
                 """,
               """
                 import java.util.List;
-
+                
                 class Test {
                     List<String> list() {
                         return List.of();
@@ -280,7 +280,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
           java(
             """
               import java.util.List;
-
+              
               public class A {
                   List<String> list;
                   public A(List<String> list) {
@@ -294,14 +294,14 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
             java(
               """
                   import com.google.common.collect.ImmutableList;
-
+                
                   class Test {
                       A a = new A(ImmutableList.of());
                   }
                 """,
               """
                   import java.util.List;
-
+                
                   class Test {
                       A a = new A(List.of());
                   }
@@ -313,13 +313,13 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
     }
 
     @Test
-    void doNotChangeMethodInvocationWithSelect() {
+    void doChangeMethodInvocationWithSelect() {
         //language=java
         rewriteRun(
           java(
             """
               import java.util.List;
-
+              
               public class A {
                   Object[] list;
                   public void method(Object[] list ) {
@@ -333,11 +333,21 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
             java(
               """
                 import com.google.common.collect.ImmutableList;
-
+                
                 class Test {
                     void method() {
                         A a = new A();
                         a.method(ImmutableList.of().toArray());
+                    }
+                }
+                """,
+              """
+                import java.util.List;
+                
+                class Test {
+                    void method() {
+                        A a = new A();
+                        a.method(List.of().toArray());
                     }
                 }
                 """
@@ -354,7 +364,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
           java(
             """
               import java.util.List;
-
+              
               public class A {
                   List<String> list;
                   public void method(List<String> list) {
@@ -368,7 +378,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
             java(
               """
                 import com.google.common.collect.ImmutableList;
-
+                
                 class Test {
                     void method() {
                         A a = new A();
@@ -378,7 +388,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
                 """,
               """
                 import java.util.List;
-
+                
                 class Test {
                     void method() {
                         A a = new A();
@@ -402,7 +412,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
               """
                 import java.util.List;
                 import com.google.common.collect.ImmutableList;
-
+                
                 class Test {
                     List<Integer> list() {
                         return ImmutableList.of(1, 2, 3);
@@ -411,7 +421,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
                 """,
               """
                 import java.util.List;
-
+                
                 class Test {
                     List<Integer> list() {
                         return List.of(1, 2, 3);
@@ -433,7 +443,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
             java(
               """
                 import com.google.common.collect.ImmutableList;
-
+                
                 class A {
                     Object[] o = new Object[] {
                             ImmutableList.of(1, 2, 3)
@@ -442,7 +452,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
                 """,
               """
                 import java.util.List;
-
+                
                 class A {
                     Object[] o = new Object[] {
                             List.of(1, 2, 3)
@@ -464,14 +474,14 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
             java(
               """
                 import com.google.common.collect.ImmutableList;
-
+                
                 class A {
                     Object o = ImmutableList.of(1, 2, 3);
                 }
                 """,
               """
                 import java.util.List;
-
+                
                 class A {
                     Object o = List.of(1, 2, 3);
                 }
@@ -484,7 +494,7 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
 
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/256")
     @Test
-    void doNotChangeNestedLists() {
+    void doChangeAssignToImmutableMap() {
         //language=java
         rewriteRun(
           version(
@@ -492,9 +502,16 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
               """
                 import com.google.common.collect.ImmutableList;
                 import java.util.List;
-
+                
                 class A {
                     Object o = List.of(ImmutableList.of(1, 2), ImmutableList.of(2, 3));
+                }
+                """,
+              """
+                import java.util.List;
+                
+                class A {
+                    Object o = List.of(List.of(1, 2), List.of(2, 3));
                 }
                 """
             ),
@@ -503,18 +520,24 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
         );
     }
 
-    @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/256")
     @Test
-    void doNotChangeAssignToImmutableList() {
+    void doChangeNestedListsWithVariableType() {
         //language=java
         rewriteRun(
           version(
             java(
               """
                 import com.google.common.collect.ImmutableList;
-
-                class Test {
-                    ImmutableList<String> l = ImmutableList.of();
+                
+                class A {
+                    ImmutableList<ImmutableList<Integer>> o = ImmutableList.of(ImmutableList.of(1, 2), ImmutableList.of(2, 3));
+                }
+                """,
+              """
+                import java.util.List;
+                
+                class A {
+                    List<List<Integer>> o = List.of(List.of(1, 2), List.of(2, 3));
                 }
                 """
             ),
@@ -522,4 +545,66 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
           )
         );
     }
+
+    @Test
+    void doChangeAssignFromImmutableListToList() {
+        rewriteRun(
+          version(
+            //language=java
+            java(
+              """
+                import com.google.common.collect.ImmutableList;
+                
+                class A {
+                    void test() {
+                        ImmutableList<Integer> o = ImmutableList.of(1, 2);
+                    }
+                }
+                """,
+              """
+                import java.util.List;
+                
+                class A {
+                    void test() {
+                        List<Integer> o = List.of(1, 2);
+                    }
+                }
+                """
+            ),
+            11
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/489")
+    @Test
+    void doChangeWithStreamOperation() {
+        rewriteRun(
+          version(
+            //language=java
+            java(
+              """
+                import com.google.common.collect.ImmutableList;
+                
+                class A {
+                    void test() {
+                        final List<Integer> list = ImmutableList.of(1, 2).stream().toList();
+                    }
+                }
+                """,
+              """
+                import java.util.List;
+                
+                class A {
+                    void test() {
+                        final List<Integer> list = List.of(1, 2).stream().toList();
+                    }
+                }
+                """
+            ),
+            11
+          )
+        );
+    }
+
 }
